# ASTRA

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  generate_prompt.py  move_to_import_wizard.py
_migration_backup/: DatabaseManager.cpp
backup/astra_backup_20260316T005945/: main.cpp
backup/astra_backup_20260316T005945/controllers/: ApplicationController.cpp  ApplicationController.h
backup/astra_backup_20260316T005945/dialogs/: EditProjectDialog.cpp  NewProjectDialog.cpp  NewProjectDialog.h
backup/astra_backup_20260316T005945/models/: Photometry.cpp  Project.cpp  RadialVelocity.h  Spectrum.cpp  Star.h
backup/astra_backup_20260316T005945/utils/: AppPaths.h  BackgroundTaskManager.cpp  CatalogQueryWorkers.h  DatabaseManager.h  GeneralImportPage.cpp  Logger.cpp  RVPhotometryPages.h  RadialVelocityImportPage.cpp  SEDImportPage.cpp  SpectraImportPage.cpp  StarImportWizard.h  ThemeManager.cpp  ThemeManager.h
backup/astra_backup_20260316T005945/views/: MainWindow.cpp  ProjectSelectionView.cpp  ProjectSelectionView.h  StarDetailView.h
backup/astra_backup_20260316T005945/views/tools/: LightcurveFetchDialog.h  SpectraFitDialog.h
resources/: resources.qrc
resources/data/: default_instruments.json  gaia_cmd.csv
resources/linux/: astra.desktop.in
resources/scripts/: photometry_body.sl  spectroscopy_interactive_body.sl
resources/themes/: catppuccin_dark.qss  catppuccin_light.qss  one_light.qss  qss_theme_generator.py  rose_pine_dawn.qss
src/: main.cpp
src/controllers/: ApplicationController.cpp  ApplicationController.h  ProjectController.cpp  ProjectController.h
src/db/: DBAccess.cpp  DBAccess.h  DatabaseManager.cpp  DatabaseManager.h  InstrumentRepository.cpp  InstrumentRepository.h  PeriodogramRepository.cpp  PeriodogramRepository.h  PhotometryRepository.cpp  PhotometryRepository.h  ProjectRepository.cpp  ProjectRepository.h  RadialVelocityRepository.cpp  RadialVelocityRepository.h  SpectrumRepository.cpp  SpectrumRepository.h  StarRepository.cpp  StarRepository.h
src/dialogs/: AddStarDialog.cpp  AddStarDialog.h  EditProjectDialog.h  ImportLightcurve.cpp  ImportLightcurve.h  LCFitDialog.cpp  LCFitDialog.h  NewProjectDialog.cpp  NewProjectDialog.h  SettingsDialog.cpp  SettingsDialog.h
src/fitting/: DiggaBackend.cpp  DiggaBackend.h  FitBackendRegistry.cpp  FitBackendRegistry.h  FitTypes.h  FitWorker.cpp  FitWorker.h  IFitBackend.h  IsisBackend.cpp  IsisBackend.h  Periodogram.cpp  Periodogram.h  StdStreamRedirector.cpp  StdStreamRedirector.h
src/importWizard/: GeneralImportPage.cpp  GeneralImportPage.h  ImportStagingArea.cpp  ImportStagingArea.h  LightcurveImportPage.cpp  LightcurveImportPage.h  RVPhotometryPages.cpp  RadialVelocityImportPage.cpp  RadialVelocityImportPage.h  SEDImportPage.cpp  SEDImportPage.h  SpectraImportPage.cpp  SpectraImportPage.h  SpectralFitImportPage.cpp  SpectralFitImportPage.h  StarImportWizard.cpp  StarImportWizard.h
src/models/: BarycentricCorrection.cpp  BarycentricCorrection.h  ColumnPreset.cpp  ColumnPreset.h  Instrument.cpp  Instrument.h  InstrumentMode.cpp  InstrumentMode.h  PeriodogramRecord.cpp  PeriodogramRecord.h  Photometry.cpp  Photometry.h  Project.cpp  Project.h  RadialVelocity.cpp  RadialVelocity.h  Spectrum.cpp  Spectrum.h  Star.cpp  Star.h  Time.cpp  Time.h
src/plotting/: MatplotlibPlotWidget.cpp  MatplotlibPlotWidget.h  lc_plot.py  plot_base.py  qcustomplot.cpp  qcustomplot.h  requirements.txt  rv_plot.py  spectrum_plot.py
src/utils/: AppSettings.cpp  AppSettings.h  BackgroundTaskManager.cpp  BackgroundTaskManager.h  CatalogQueryWorkers.cpp  CheckStateDragger.cpp  CheckStateDragger.h  ClaretFilter.cpp  ClaretFilter.h  ClaretTables.cpp  ClaretTables.h  CoastlineData.cpp  CoastlineData.h  CrossRefResolver.cpp  CrossRefResolver.h  DataStore.cpp  DataStore.h  DatabaseManager.cpp  DatabaseManager.h  ExtractSED.cpp  ExtractSED.h  FilterWavelength.cpp  FilterWavelength.h  GeneralImportPage.cpp  GeneralImportPage.h  ImportStagingArea.cpp  ImportStagingArea.h  LCFitPhysics.cpp  LCFitPhysics.h  LCFitRunner.cpp  LCFitRunner.h  LightcurveFetcher.cpp  LightcurveFetcher.h  Logger.cpp  Logger.h  ObservabilityCalculator.cpp  ObservabilityCalculator.h  RVPhotometryPages.cpp  RVPhotometryPages.h  RadialVelocityImportPage.cpp  (+13 more)
src/views/: BooleanColumnDelegate.h  ColumnConfigDialog.cpp  ColumnConfigDialog.h  InstrumentConfigView.cpp  InstrumentConfigView.h  MainWindow.cpp  MainWindow.h  ProjectSelectionView.cpp  ProjectSelectionView.h  ProjectView.cpp  ProjectView.h  StarDetailView.cpp  StarDetailView.h  StarFilterWidget.cpp  StarFilterWidget.h
src/views/panels/: DetailPanel.cpp  DetailPanel.h  DetailPanelFactory.cpp  DetailPanelFactory.h  LCPanel.cpp  LCPanel.h  PanelUtils.cpp  PanelUtils.h  PeriodogramPanel.cpp  PeriodogramPanel.h  RVPanel.cpp  RVPanel.h  SpectraPanel.cpp  SpectraPanel.h  SummaryPanel.cpp  SummaryPanel.h
src/views/tools/: CMDDialog.cpp  CMDDialog.h  FitProgressDialog.cpp  FitProgressDialog.h  FitSetupWidget.cpp  FitSetupWidget.h  GalacticOrbitDialog.cpp  GalacticOrbitDialog.h  InteractiveIsisDialog.cpp  InteractiveIsisDialog.h  LightcurveFetchDialog.cpp  LightcurveFetchDialog.h  ObservabilityDialog.cpp  ObservabilityDialog.h  RVAddFitDialog.cpp  RVAddFitDialog.h  RVAddPointDialog.cpp  RVAddPointDialog.h  RVInspectorDialog.cpp  RVInspectorDialog.h  RVMCMCResultsDialog.cpp  RVMCMCResultsDialog.h  SEDFitDialog.cpp  SEDFitDialog.h  SpectraFitDialog.cpp  SpectraFitDialog.h
src/views/widgets/: AnsiTerminalWidget.cpp  AnsiTerminalWidget.h  FitPreviewOverlay.cpp  FitPreviewOverlay.h  GridSelectorWidget.cpp  GridSelectorWidget.h  IsisMacroPanel.cpp  IsisMacroPanel.h  TerminalView.cpp  TerminalView.h
tests/: CMakeLists.txt  generate_reference_bjd.py  reference_bjd.json  test_barycentric.cpp  test_datastore.cpp  test_main.cpp  test_project.cpp  test_star.cpp
themes/: catppuccin_dark.qss  catppuccin_light.qss
